<resources>
    <string name="app_name">المدينة</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_label">المدينة</string>
    <string name="create_account">انشاء حساب</string>
    <string name="login">تسجيل الدخول</string>
    <string name="create_post">إضافة قصة</string>
    <string name="music">Music</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="back">رجوع</string>
    <string name="write_samthing">أكتب شيء…</string>
    <string name="save">حفظ</string>
    <string name="cancel">إلغاء</string>
    <string name="image_video">صورة/ فيديو</string>

    <string-array name="sex">
        <item name="men">رجل</item>
        <item name="women">مرأة</item>
    </string-array>

    <string name="loremipsom">هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسوم</string>
    <string name="add_freind">إضافة</string>
    <string name="edit_profil">تعديل الحساب</string>
    <string name="txt_login">تسجيل الدخول</string>

</resources>