...
    android:layout_height="match_parent"
    android:id="@+id/splash_activity"
    android:background="@color/primary_color"
    tools:context=".view.auth.LoginActivity">

    <TextView
        android:id="@+id/app_name_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_marginBottom="180dp"
        android:fontFamily="@font/aref_ruqa_regular"
...
