...
                </TableRow>
            </TableLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/auth_fragment"/>

        </LinearLayout>




...
